Single executable. Embeds a file system created with github.com/mjibson/esc. js and wasm now served from embedded fs. .gitignore now ignores go file generated by esc. index.go now fetches wasm_exec and main.wasm from /static/ in embedded fs Makefile now calls esc to generate static.go ServeMux handlers and handler funcs adjusted to accomodate serving from embedded fs.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 ## This is copied from the go distribution
 wasm_exec.js
 
+## generated go files
+static.go
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
